[gd_scene load_steps=10 format=3 uid="uid://c3y68r2wlprwq"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_bg17w"]
[ext_resource type="Texture2D" uid="uid://cr0m5skxrxst4" path="res://assets/tiles/2d_lights_and_shadows_neutral_point_light.png" id="1_uants"]
[ext_resource type="PackedScene" uid="uid://7y8njls5xcl" path="res://Rooms/base_map.tscn" id="2_yydlc"]
[ext_resource type="Theme" uid="uid://cjor63v5c1631" path="res://assets/ui/menu/menu_theme.tres" id="4_6l5lx"]
[ext_resource type="FontFile" uid="uid://xfq7h50t0hea" path="res://assets/ui/menu/assets/nokiafc22.ttf" id="4_aqiar"]
[ext_resource type="PackedScene" uid="uid://ctm80xx80ej87" path="res://scenes/options_menu/options_menu.tscn" id="6_07ll3"]

[sub_resource type="Animation" id="Animation_u8hra"]
resource_name = "Fade_In"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu/Front Curtain:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main Menu/Back Curtain:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main Menu/Front Curtain:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nvwsw"]
resource_name = "Fade_Out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu/Front Curtain:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4rr0"]
_data = {
"Fade_In": SubResource("Animation_u8hra"),
"Fade_Out": SubResource("Animation_nvwsw")
}

[node name="main_screen" type="Node2D"]
position = Vector2(32, 72)
script = ExtResource("1_bg17w")

[node name="Background" type="Node2D" parent="."]

[node name="BaseMap" parent="Background" instance=ExtResource("2_yydlc")]
position = Vector2(108, -66)

[node name="Follower" type="PointLight2D" parent="Background"]
position = Vector2(927, 438)
color = Color(0.419608, 0.290196, 0.14902, 1)
energy = 1.68
shadow_enabled = true
texture = ExtResource("1_uants")
texture_scale = 2.82

[node name="Main Menu" type="CanvasLayer" parent="."]

[node name="Back Curtain" type="ColorRect" parent="Main Menu"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main Menu" type="MarginContainer" parent="Main Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/Main Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="MarginContainer" type="MarginContainer" parent="Main Menu/Main Menu/VBoxContainer"]
layout_mode = 2
tooltip_text = "zdeerzerzrzerz"

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/Main Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("4_aqiar")
theme_override_font_sizes/normal_font_size = 96
text = "Behind The Doors"
fit_content = true
autowrap_mode = 0

[node name="List Container" type="VBoxContainer" parent="Main Menu/Main Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Jouer" type="Button" parent="Main Menu/Main Menu/VBoxContainer/List Container"]
layout_mode = 2
theme = ExtResource("4_6l5lx")
text = "  Jouer !  "

[node name="Options" type="Button" parent="Main Menu/Main Menu/VBoxContainer/List Container"]
layout_mode = 2
theme = ExtResource("4_6l5lx")
disabled = true
text = "Options"

[node name="Quitter" type="Button" parent="Main Menu/Main Menu/VBoxContainer/List Container"]
layout_mode = 2
theme = ExtResource("4_6l5lx")
text = "Quitter"

[node name="Options Menu" parent="Main Menu" instance=ExtResource("6_07ll3")]
visible = false

[node name="Front Curtain" type="ColorRect" parent="Main Menu"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeTransiton" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k4rr0")
}

[connection signal="pressed" from="Main Menu/Main Menu/VBoxContainer/List Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main Menu/Main Menu/VBoxContainer/List Container/Quitter" to="." method="_on_quitter_pressed"]
